--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "react-table": "7.8.0",
     "source-map-loader": "^4.0.1",
     "stylis": "4.1.4",
-    "stylis-plugin-rtl": "2.1.1",
+    "stylis-plugin-rtl": "^2.0.2",
     "yup": "1.1.1"
   },
   "scripts": {
