--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "@mui/material": "5.12.3",
     "chart.js": "4.3.0",
     "chroma-js": "2.4.2",
+    "firebase": "^9.22.0",
     "prop-types": "15.8.1",
     "react": "18.2.0",
     "react-chartjs-2": "5.2.0",
     "react-dom": "18.2.0",
+    "react-firebaseui": "^6.0.0",
     "react-github-btn": "1.4.0",
     "react-router-dom": "6.11.0",
     "react-scripts": "5.0.1",
