--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "@emotion/styled": "11.10.8",
     "@mui/icons-material": "5.11.16",
     "@mui/material": "5.12.3",
+    "axios": "^1.4.0",
     "chart.js": "4.3.0",
     "chroma-js": "2.4.2",
+    "jwt-decode": "^3.1.2",
     "prop-types": "15.8.1",
     "react": "18.2.0",
     "react-chartjs-2": "5.2.0",
@@ -28,6 +30,7 @@
     "react-router-dom": "6.11.0",
     "react-scripts": "5.0.1",
     "react-table": "7.8.0",
+    "react-toastify": "^9.1.3",
     "source-map-loader": "^4.0.1",
     "stylis": "4.1.4",
     "stylis-plugin-rtl": "^2.0.2",
@@ -39,12 +42,6 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "install:clean": "rm -rf node_modules/ && rm -rf package-lock.json && npm install && npm start"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
   },
   "browserslist": {
     "production": [
