--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
     "axios": "^1.4.0",
     "chart.js": "4.3.0",
     "chroma-js": "2.4.2",
-    "eslint-config-react-app": "^6.0.0",
     "firebase": "^9.22.0",
+    "formik": "^2.4.1",
     "jwt-decode": "^3.1.2",
     "prop-types": "15.8.1",
     "react": "18.2.0",
@@ -30,11 +30,15 @@
     "react-dom": "18.2.0",
     "react-firebaseui": "^6.0.0",
     "react-github-btn": "1.4.0",
+    "react-redux": "^8.0.7",
     "react-router-dom": "6.11.0",
     "react-scripts": "5.0.1",
     "react-table": "7.8.0",
     "react-toastify": "^9.1.3",
+    "redux": "^4.2.1",
+    "redux-thunk": "^2.4.2",
     "source-map-loader": "^4.0.1",
+    "styled-components": "^6.0.0-rc.3",
     "stylis": "4.1.4",
     "stylis-plugin-rtl": "^2.0.2",
     "yup": "1.1.1"
@@ -59,15 +63,7 @@
     ]
   },
   "devDependencies": {
-    "cross-env": "^7.0.3",
-    "eslint": "8.39.0",
-    "eslint-config-prettier": "8.8.0",
-    "eslint-plugin-import": "2.27.5",
-    "eslint-plugin-jsx-a11y": "6.7.1",
-    "eslint-plugin-prettier": "4.2.1",
-    "eslint-plugin-react": "7.32.2",
-    "eslint-plugin-react-hooks": "4.6.0",
-    "prettier": "2.8.8"
+    "cross-env": "^7.0.3"
   },
   "overrides": {
     "svgo": "3.0.2"
