--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "@mui/icons-material": "5.11.16",
     "@mui/material": "5.12.3",
     "axios": "^1.4.0",
+    "change-case": "^4.1.2",
     "chart.js": "4.3.0",
     "chroma-js": "2.4.2",
+    "date-fns": "^2.30.0",
     "firebase": "^9.22.0",
     "formik": "^2.4.1",
     "jwt-decode": "^3.1.2",
@@ -30,6 +32,7 @@
     "react-dom": "18.2.0",
     "react-firebaseui": "^6.0.0",
     "react-github-btn": "1.4.0",
+    "react-helmet-async": "^1.3.0",
     "react-redux": "^8.0.7",
     "react-router-dom": "6.11.0",
     "react-scripts": "5.0.1",
@@ -37,7 +40,7 @@
     "react-toastify": "^9.1.3",
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
-    "source-map-loader": "^4.0.1",
+    "simplebar-react": "^3.2.4",
     "styled-components": "^6.0.0-rc.3",
     "stylis": "4.1.4",
     "stylis-plugin-rtl": "^2.0.2",
@@ -63,7 +66,9 @@
     ]
   },
   "devDependencies": {
-    "cross-env": "^7.0.3"
+    "@iconify/react": "^4.1.0",
+    "cross-env": "^7.0.3",
+    "source-map-loader": "^4.0.1"
   },
   "overrides": {
     "svgo": "3.0.2"
