--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "date-fns": "^2.30.0",
     "firebase": "^9.22.0",
     "formik": "^2.4.1",
+    "history": "^5.3.0",
     "jwt-decode": "^3.1.2",
     "prop-types": "15.8.1",
     "react": "18.2.0",
