--- a/package.json
+++ b/package.json
@@ -17,12 +17,16 @@
     "@emotion/react": "11.10.8",
     "@emotion/styled": "11.10.8",
     "@mui/icons-material": "5.11.16",
+    "@mui/joy": "^5.0.0-alpha.84",
     "@mui/material": "5.12.3",
+    "@mui/styles": "^5.13.2",
+    "@mui/x-date-pickers": "^6.7.0",
     "axios": "^1.4.0",
     "change-case": "^4.1.2",
     "chart.js": "4.3.0",
     "chroma-js": "2.4.2",
     "date-fns": "^2.30.0",
+    "dayjs": "^1.11.8",
     "firebase": "^9.22.0",
     "formik": "^2.4.1",
     "history": "^5.3.0",
