--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "change-case": "^4.1.2",
     "chart.js": "4.3.0",
     "chroma-js": "2.4.2",
+    "classnames": "^2.3.2",
     "date-fns": "^2.30.0",
     "dayjs": "^1.11.8",
     "firebase": "^9.22.0",
