--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "history": "^5.3.0",
     "jwt-decode": "^3.1.2",
     "prop-types": "15.8.1",
+    "qrcode.react": "^3.1.0",
     "react": "18.2.0",
     "react-chartjs-2": "5.2.0",
     "react-dom": "18.2.0",
@@ -42,11 +43,13 @@
     "react-redux": "^8.0.7",
     "react-router-dom": "6.11.0",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.29.0",
     "react-table": "7.8.0",
     "react-toastify": "^9.1.3",
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
     "simplebar-react": "^3.2.4",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^6.0.0-rc.3",
     "stylis": "4.1.4",
     "stylis-plugin-rtl": "^2.0.2",
