--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@mui/material": "5.12.3",
     "@mui/styles": "^5.13.2",
     "@mui/x-date-pickers": "^6.7.0",
+    "alpinejs": "^3.12.2",
     "axios": "^1.4.0",
     "change-case": "^4.1.2",
     "chart.js": "4.3.0",
