--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "formik": "^2.4.1",
     "history": "^5.3.0",
     "jwt-decode": "^3.1.2",
+    "moment": "^2.29.4",
     "prop-types": "15.8.1",
     "qrcode.react": "^3.1.0",
     "react": "18.2.0",
