--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@emotion/cache": "11.10.8",
     "@emotion/react": "11.10.8",
     "@emotion/styled": "11.10.8",
+    "@fontsource/montez": "^5.0.5",
     "@mui/icons-material": "5.11.16",
     "@mui/joy": "^5.0.0-alpha.84",
     "@mui/material": "5.12.3",
@@ -34,6 +35,7 @@
     "history": "^5.3.0",
     "jwt-decode": "^3.1.2",
     "moment": "^2.29.4",
+    "polished": "^4.2.2",
     "prop-types": "15.8.1",
     "qrcode.react": "^3.1.0",
     "react": "18.2.0",
