--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "url": "git+https://github.com/creativetimofficial/material-dashboard-react.git"
   },
   "dependencies": {
+    "@brainhubeu/react-carousel": "^2.0.4",
     "@emotion/cache": "11.10.8",
     "@emotion/react": "11.10.8",
     "@emotion/styled": "11.10.8",
